# rpfflow

./: main.py  path_Cu_updated.extxyz  path_Pt_updated.extxyz  pyproject.toml  test.extxyz  test_generate_adsorption_structures.extxyz
graph_mm/: graph_ops.py  molgraph.py  visualizer.py
pathways/: Rsearch.py  compute.py  gp_data.py  search.py  search_C.py
rpfflow/core/: action.py  cutter.py  model.py  search.py  state.py  structure.py
rpfflow/rules/: basica.py  matchs.py
rpfflow/tests/: POSCAR  POSCAR_ads_0  POSCAR_ads_2  temp-test.py  test_asedb.py  test_smial.py
rpfflow/utils/: convert.py  graph_ops.py  logger_config.py  process.py  visualizer.py
rules/: basica.py  matchs.py  struct.py
tests/: POSCAR  POSCAR_ads_1  temp-test.py  test-ovito.py  test.py  test_rules.py  test_smial.py
