[build-system]
# 定义构建后端，推荐使用 setuptools 或 hatch
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rpfflow"
version = "0.1.0"
description = "A reaction pathway searching tool for electrocatalysis based on RDKit and NetworkX."
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Xingze Geng", email = "1308186024@qq.comn" }
]
license = { text = "MIT" }

# 核心依赖项：这些是运行代码必须安装的
dependencies = [
    "rdkit==2025.9.3",
    "networkx>=3.0",
    "ase>=3.22.1",
    "matplotlib>=3.5.0",
    "numpy>=2.4.1",
]

[project.optional-dependencies]
# 选装依赖：例如开发测试时才需要的工具
dev = [
    "pytest>=7.0",

]

[tool.setuptools]
# 自动发现包目录
packages = ["rpfflow"]

[tool.black]
# 代码格式化配置
line-length = 88
target-version = ['py39']
